--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "fabric": "^7.1.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
